fix z-index to 1

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -8,6 +8,7 @@ header {
   color: var(--dark-text-color);
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 header img {
   height: 80px;
